manifests/yaobank/apps/yaobank_virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yaobank
  namespace: yaobank
spec:
  hosts:
    - yaobank.local
  gateways:
    - istio-system/yaobank
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: customer.yaobank.svc.cluster.local
            port:
              number: 80
